--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
 <!-- End footer Section -->
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-        <script src="js/vendor/jquery-1.11.2.min.js"></script>
+        <script src="js/vendor/jquery-1.11.3.min.js"></script>
 
 <script src="js/isotope.pkgd.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
@@ -832,7 +832,7 @@
 		</script>
 <script src="js/main.js"></script>
 
-<script src="showHide.js" type="text/javascript"></script>
+<script src="js/showHide.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 
