--- a/about.html
+++ b/about.html
@@ -34,40 +34,44 @@
         <![endif]-->
 
 
-        <!-- Start Header Section -->
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs12 ">
+<!-- Start Header Section -->
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs12 ">
 
-          <header class="main_menu_sec navbar ">
-          	<div class="container">
-          		<div class="row">
-          			<div class="col-lg-3 col-md-3 col-sm-12">
-          				<div class="lft_hd">
-          					<a href="index.html"><img src="img/logo.png" alt=""/></a>
-          				</div>
-          			</div>
-          			<div class="col-lg-9 col-md-9 col-sm-12">
-          				<div class="rgt_hd">
-          					<div class="main_menu">
-          						<nav id="nav_menu">
+  <header class="main_menu_sec navbar navbar-default navbar-fixed-top">
+  	<div class="container">
+  		<div class="row">
+  			<div class="col-lg-3 col-md-3 col-sm-12">
+  				<div class="lft_hd">
+  					<a href="index.html"><img src="img/logo.png" alt=""/></a>
+  				</div>
+  			</div>
+  			<div class="col-lg-9 col-md-9 col-sm-12">
+  				<div class="rgt_hd">
+  					<div class="main_menu">
+  						<nav id="nav_menu">
+  							<button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
+  							<span class="icon-bar"></span>
+  							<span class="icon-bar"></span>
+  							<span class="icon-bar"></span>
+  							</button>
+  						<div id="navbar">
+  							<ul>
+  								<li><a class="page-scroll" href="index.html">Inicio</a></li>
+  								<li><a class="page-scroll" href="about.html">Quienes Somos</a></li>
+  								<li><a class="page-scroll" href="#skill_sec">Nuestro Compromiso</a></li>
+  								
+  							</ul>
+  						</div>
+  						</nav>
+  					</div>
 
-          						<div id="navbar">
-          							<ul>
-          								<li><a class="page-scroll" href="index.html">Inicio</a></li>
-          								<li><a class="page-scroll" href="about.html">Quienes Somos</a></li>
-          								<li><a class="page-scroll" href="#skill_sec">Nuestro Compromiso</a></li>
-
-          							</ul>
-          						</div>
-          						</nav>
-          					</div>
-
-          				</div>
-          			</div>
-          		</div>
-          	</div>
-          </header>
-          </div>
-        <!-- End Header Section -->
+  				</div>
+  			</div>
+  		</div>
+  	</div>
+  </header>
+  </div>
+<!-- End Header Section -->
 
 <!-- start slider Section -->
 <section id="slider_sec">
