armando casi listo, falta centrar la imagen principal, no se esta dejando

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Sima</title>
+        <title>Aguas Concepción</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="./css/estilos.css">
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 	<!--[if lt IE 9]> <script src="js/html5shiv.js"></script>
@@ -34,8 +36,9 @@
         <![endif]-->
 
 
-        <!-- Start Header Section -->
+        <!-- Start Header Section
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs12 ">
+
 
           <header class="main_menu_sec navbar ">
           	<div class="container">
@@ -67,22 +70,52 @@
           	</div>
           </header>
           </div>
-        <!-- End Header Section -->
+         End Header Section -->
 
-<!-- start slider Section -->
+         <!-- Start Header Nico Section -->
+
+
+
+         <header>
+
+           <div class="menu_bar">
+             <a href="#" class="bt-menu"><span class="icon-list2"></span>Aguas Concepción</a>
+           </div>
+
+           <nav>
+             <ul>
+               <li><a href="#">Inicio</a></li>
+               <li><a href="#">Quienes Somos</a></li>
+               <li><a href="#">Nuestro Compromiso</a></li>
+               <li><a href="#">Contacto</a></li>
+
+             </ul>
+           </nav>
+         </header>
+        <!-- End Header Nico Section -->
+
+
+        <section id="image_slider">
+
+
+        </section>
+
+<!-- start slider Section
+
 <section id="slider_sec">
+
 	<div class="container">
 		<div class="row">
 			<div class="slider">
 					<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-				  <!-- Indicators -->
+
 				  <ol class="carousel-indicators">
 					<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 					<li data-target="#carousel-example-generic" data-slide-to="1"></li>
 					<li data-target="#carousel-example-generic" data-slide-to="2"></li>
 				  </ol>
 
-				  <!-- Wrapper for slides -->
+				  < Wrapper for slides
 				  <div class="carousel-inner" role="listbox">
 					<div class="item active">
 						<div class="wrap_caption">
@@ -110,21 +143,21 @@
 					</div>
 				  </div>
 
-				  <!-- Controls -->
+				   Controls
 				  <a class="left left_crousel_btn" href="#carousel-example-generic" role="button" data-slide="prev">
 					<i class="fa fa-angle-left"></i>
-					<span class="sr-only">Previous</span>
+					<span class="sr-only">Anterior</span>
 				  </a>
 				  <a class="right right_crousel_btn" href="#carousel-example-generic" role="button" data-slide="next">
 					<i class="fa fa-angle-right"></i>
-					<span class="sr-only">Next</span>
+					<span class="sr-only">Siguiente</span>
 				  </a>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
-<!-- End slider Section -->
+ End slider Section -->
 
 <!-- start about Section -->
 <section id="abt_sec">
@@ -146,7 +179,7 @@
 </section>
 <!-- End About Section -->
 
-<!-- start Counting section-->
+<!-- start Counting section
 <section id="counting_sec">
 <div class="container">
 	<div class="row">
@@ -182,9 +215,9 @@
 	</div>
 </div>
 </section>
+End Counting section-->
 
-
-<!-- start progress bar Section -->
+<!-- start progress bar Section
 <section id="skill_sec">
 	<div class="container">
 		<div class="row">
@@ -245,9 +278,9 @@
 		</div>
 	</div>
 </section>
-<!-- End progress bar Section -->
+ End progress bar Section -->
 
-<!-- start Service Section -->
+<!-- start Service Section
 <section id="pr_sec">
 	<div class="container">
 		<div class="row">
@@ -304,7 +337,7 @@
 		</div>
 	</div>
 </section>
-<!-- End Service Section -->
+ End Service Section -->
 
 <!-- start portfolio Section -->
 <section id="protfolio_sec">
@@ -348,6 +381,7 @@
 					<img class="img-responsive" src="http://showwp.com/demos/porton/default/upload/p_03.jpg" alt="">
 					</div>
 					</div>
+          <!--
 					<div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
 					<div class="single-portfolio web-design">
 					<img class="img-responsive" src="http://showwp.com/demos/porton/default/upload/p_04.jpg" alt="">
@@ -387,22 +421,25 @@
 					<div class="single-portfolio photography">
 					<img class="img-responsive" src="http://showwp.com/demos/porton/default/upload/p_08.jpg" alt="">
 					</div>
+        -->
 					</div>
 				</div>
 
 
 			</div>
-				<div class="post_btn">
+				<!--
+        <div class="post_btn">
 					<div class="hover_effect_btn" id="hover_effect_btn">
 						<a href="#hover_effect_btn" data-hover="view more post"><span>view more post</span></a>
 					</div>
+        -->
 				</div>
 			</div>
 		</div>
 </section>
 <!-- End Portfolio Section -->
 
-<!-- start our team Section -->
+<!-- start our team Section
 <section id="tm_sec">
 	<div class="container">
 		<div class="row">
@@ -479,7 +516,7 @@
 		</div>
 	</div>
 </section>
-<!-- End our team Section -->
+End our team Section -->
 
 <!-- start our teastimonial Section -->
 <section id="tstm_sec">
@@ -571,19 +608,22 @@
 					<p>Nullam metus arcu, pharetra eu tempor vel, consectetur nec metus. Praesent malesuada, purus et euismod rutrum, augue nisi facilisis diam, vitae auctor nisl libero nec eros. Vivamus vitae pulvinar augue. Nulla facilisi. Quisque rutrum ante interdum</p>
 					<a href="">Read more <i class="fa fa-long-arrow-right"></i></a>
 				</div>
+        <br>
 			</div>
+      <!--
 			<div class="post_btn">
 				<div class="hover_effect_btn" id="hover_effect_btn">
 					<a href="#hover_effect_btn" data-hover="view more post"><span>view more post</span></a>
 				</div>
 			</div>
+    -->
 
 		</div>
 	</div>
 </section>
 <!-- End Latest post Section -->
 
-<!-- start pricing Section -->
+<!-- start pricing Section
 <section id="pricing_sec">
 	<div class="container">
 		<div class="row">
@@ -636,7 +676,7 @@
 		</div>
 	</div>
 </section>
-<!-- End pricing Section -->
+ End pricing Section -->
 
 
 <!-- start Happy Client Section -->
@@ -692,24 +732,24 @@
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs12 ">
 				<div class="title_sec">
-					<h1>Contact Info</h1>
-					<h2>WE’RE BRANDING & DIGITAL STUDIO FROM VIET NAM</h2>
+					<h1>Contactanos!</h1>
+					<h2>El mejor agua que beberas hoy!</h2>
 				</div>
 			</div>
 			<div class="col-sm-6">
 				<div id="cnt_form">
 					<form id="contact-form" class="contact" name="contact-form" method="post" action="send-mail.php">
 						<div class="form-group">
-						<input type="text" name="name" class="form-control name-field" required="required" placeholder="Your Name">
+						<input type="text" name="name" class="form-control name-field" required="required" placeholder="Tu Nombre">
 						</div>
 						<div class="form-group">
-							<input type="email" name="email" class="form-control mail-field" required="required" placeholder="Your Email">
+							<input type="email" name="email" class="form-control mail-field" required="required" placeholder="Tu Email">
 						</div>
 						<div class="form-group">
-							<textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Message"></textarea>
+							<textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Mensaje"></textarea>
 						</div>
 						<div class="form-group">
-							<button type="submit" class="btn btn-primary">Send</button>
+							<button type="submit" class="btn btn-primary">Enviar</button>
 						</div>
 					</form>
 				</div>
@@ -717,9 +757,9 @@
 			<div class="col-lg-6 col-md-6 col-sm-6">
 				<div class="cnt_info">
 					<ul>
-						<li><i class="fa fa-facebook"></i><p>121 King Street, Melbourne Victoria 3000 Australia</p></li>
-						<li><i class="fa fa-envelope"></i><p>contact@info.com</p></li>
-						<li><i class="fa fa-phone"></i><p>+0987654321 (+012345678)</p></li>
+						<li><i class="fa fa-facebook"></i><p>calle 1 1638 casa 13 lomas de Bellavista, Concepcion, BioBio.</p></li>
+						<li><i class="fa fa-envelope"></i><p>contacto@aguasconcepcion.cl</p></li>
+						<li><i class="fa fa-phone"></i><p>+56 9 99116927</p></li>
 					</ul>
 				</div>
 			</div>
@@ -727,26 +767,6 @@
 	</div>
 </section>
 <!-- End contact us  Section -->
-
-<!-- start located map Section -->
-<section id="ltd_map_sec">
-<div class="container">
-	<div class="row">
-		<div class="col-lg-12">
-			<div class="map">
-			<h1>located THE MAP</h1><a href="#slidingDiv" class="show_hide" rel="#slidingDiv"><i class="fa fa-angle-up"></i></a>
-			<div id="slidingDiv">
-				<div class="map_area">
-					<div id="googleMap" style="width:100%;height:300px;"></div>
-				</div>
-			</div>
-			</div>
-		</div>
-	</div>
-</div>
-</section>
-
-<!-- End located map  Section -->
 <!-- start footer Section -->
 <footer id="ft_sec">
 	<div class="container">
@@ -756,18 +776,14 @@
 					<ul>
 						<li><a href=""><i class="fa fa-facebook"></i></a></li>
 						<li><a href=""><i class="fa fa-twitter"></i></a></li>
-						<li><a href=""><i class="fa fa-dribbble"></i></a></li>
-						<li><a href=""><i class="fa fa-rss"></i></a></li>
-						<li><a href=""><i class="fa fa-flickr"></i></a></li>
-						<li><a href=""><i class="fa fa-pinterest"></i></a></li>
 						<li><a href=""><i class="fa fa-linkedin"></i></a></li>
 						<li><a href=""><i class="fa fa-skype"></i></a></li>
-						<li><a href=""><i class="fa fa-google"></i></a></li>
+
 					</ul>
 				</div>
 				<ul class="copy_right">
-					<li>&copy;Sima 2015</li>
-					<li>developer by md. shiddikur rahman</li>
+					<li>&copy;Aguas Concepción</li>
+					<li>Developed by N. R.</li>
 				</ul>
 			</div>
 		</div>
@@ -777,7 +793,7 @@
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
         <script src="js/vendor/jquery-1.11.3.min.js"></script>
-
+    <script type="text/javascript" src="./js/menu.js"></script>
 <script src="js/isotope.pkgd.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery-ui.js"></script>
@@ -790,48 +806,13 @@
 <script src="js/jquery.easing.min.js"></script>
 <script src="js/scrolling-nav.js"></script>
 <script src="js/plugins.js"></script>
-<!-- Google Map js -->
-        <script src="https://maps.googleapis.com/maps/api/js"></script>
-		<script>
-			function initialize() {
-			  var mapOptions = {
-				zoom: 14,
-				scrollwheel: false,
-				center: new google.maps.LatLng(41.092586000000000000, -75.592688599999970000)
-			  };
-			  var map = new google.maps.Map(document.getElementById('googleMap'),
-				  mapOptions);
-			  var marker = new google.maps.Marker({
-				position: map.getCenter(),
-				animation:google.maps.Animation.BOUNCE,
-				icon: 'img/map-marker.png',
-				map: map
-			  });
-			}
-			google.maps.event.addDomListener(window, 'load', initialize);
-		</script>
+
+
 <script src="js/main.js"></script>
 
 <script src="js/showHide.js" type="text/javascript"></script>
 
-<script type="text/javascript">
 
-$(document).ready(function(){
-
-
-   $('.show_hide').showHide({
-		speed: 1000,  // speed you want the toggle to happen
-		easing: '',  // the animation effect you want. Remove this line if you dont want an effect and if you haven't included jQuery UI
-		changeText: 1, // if you dont want the button text to change, set this to 0
-		showText: 'View',// the button text to show when a div is closed
-		hideText: 'Close' // the button text to show when a div is open
-
-	});
-
-
-});
-
-</script>
 <script>
     jQuery(document).ready(function( $ ) {
         $('.counter').counterUp({
