avances en armando, funcionando, despues de este ci vienen las fotos y textos

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <link rel="stylesheet" href="css/owl.carousel.css">
         <link rel="stylesheet" href="css/responsive.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/fonts.css">
 
     </head>
 <body >
@@ -79,7 +80,7 @@
          <header>
 
            <div class="menu_bar">
-             <a href="#" class="bt-menu"><span class="icon-list2"></span>Aguas Concepción</a>
+             <a href="#" class="bt-menu"><span class="icon-menu"></span>Aguas Concepción</a>
            </div>
 
            <nav>
