armando version estable y buena

--- a/index.html
+++ b/index.html
@@ -96,11 +96,10 @@
         <!-- End Header Nico Section -->
 
 
-        <section id="image_slider">
-
-
-        </section>
-
+        <div class="centrarimg">
+            <section id="image_slider" class="center">
+            </section>
+        </div>
 <!-- start slider Section
 
 <section id="slider_sec">
@@ -758,7 +757,7 @@ End our team Section -->
 			<div class="col-lg-6 col-md-6 col-sm-6">
 				<div class="cnt_info">
 					<ul>
-						<li><i class="fa fa-facebook"></i><p>calle 1 1638 casa 13 lomas de Bellavista, Concepcion, BioBio.</p></li>
+						<li><i class="fa fa-facebook"></i><p><a href="facebook.com">Facebook</a></p></li>
 						<li><i class="fa fa-envelope"></i><p>contacto@aguasconcepcion.cl</p></li>
 						<li><i class="fa fa-phone"></i><p>+56 9 99116927</p></li>
 					</ul>
