--- a/index.html
+++ b/index.html
@@ -511,7 +511,8 @@ End Counting section-->
 						<h3>Sheena Maya<span> Developer </span></h3>
 						<p>Lorem ipsum dolor sit amet, consecttur adipisicing elit. Laudant</p>
 					</div>
-				</div>
+				</div>st
+
 			</div>
 		</div>
 	</div>
