cambios de hace un rato

--- a/about.html
+++ b/about.html
@@ -26,29 +26,24 @@
     </head>
 <body >
 
-        <div id="loader-wrapper">
-            <div class="logo"></div>
-            <div id="loader">
-            </div>
-        </div>
 
-         <header>
+    <header>
+    <div class="menu_bar">
+      <a href="#" class="bt-menu"><span class="icon-menu"></span>Aguas Concepción</a>
+    </div>
 
-           <div class="menu_bar">
-             <a href="#" class="bt-menu"><span class="icon-menu"></span>Aguas Concepción</a>
-           </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="about.html">Quienes Somos</a></li>
+        <li><a href="productos.html">Productos</a></li>
+        <li><a class="page-scroll" href="#ctn_sec">Contacto</a></li>
+       </li>
 
-           <nav>
-             <ul>
-               <li><a href="index.html">Inicio</a></li>
-               <li><a href="about.html">Quienes Somos</a></li>
-               <li><a href="productos.html">Productos</a></li>
-               <li><a class="page-scroll" href="#ctn_sec">Contacto</a></li>
-							</li>
+      </ul>
+    </nav>
+  </header>
 
-             </ul>
-           </nav>
-         </header>
         <!-- End Header Nico Section -->
 
 
@@ -81,7 +76,7 @@ Ambos procesos se juntan en nuestro centro de distribución y posteriormente son
 	</div>
 </section>
 <!-- End About Section -->
-<!-- start our team Section -->
+<!-- start our team Section
 <section id="tm_sec">
 	<div class="container">
 		<div class="row">
@@ -124,7 +119,7 @@ Ambos procesos se juntan en nuestro centro de distribución y posteriormente son
 		</div>
 	</div>
 </section>
-<!--End our team Section -->
+End our team Section -->
 
 <!-- start Counting section
 <section id="counting_sec">
@@ -247,29 +242,23 @@ es por esto que desde nuestros inicios trabajamos con alianzas estratégicas; qu
 
 				</div>
 			</div>
-			<div class="col-lg-4 col-md-4 col-sm-12">
+      <div class="col-lg-4 col-md-4 col-sm-12">
 				<div class="lts_pst">
 
-					<h2>Misión</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<h2>Visión</h2>
+					<p>"Ser el mayor productor y distribuidor de Agua Purificada y Libre de Sodio, del sur de Chile"</p>
 
 				</div>
+        <br>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-12">
 				<div class="lts_pst">
 
-					<h2>Visión</h2>
-					<p>"Ser el mayor productor y distribuidor de Agua Purificada y Libre de Sodio, del sur de Chile"
-
-Frases:
-
-“Toma cuidado de tu cuerpo es el único lugar que tienes para vivir”, Jim Rohn
-
-“hasta el 70% de nuestro cuerpo es Agua”. Erre Pe
+					<h2>Misión</h2>
+				<p>Desde lo mas interno de nuestra región, nace Aguas Concepcion, con el objetivo de proveer  agua purificada a toda nuestra zona y alrededores, en en futuro próximo toda nuestra región; trabajado siempre para nuestros clientes y sus familias, comprometiéndonos con ellos y con el entorno que habitamos.
 </p>
 
 				</div>
-        <br>
 			</div>
 
 		</div>
