--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Aguas Concepción</title>
         <meta name="description" content="">
-        <link rel="stylesheet" href="./css/estilos.css">
+
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
 
@@ -22,6 +22,7 @@
         <link rel="stylesheet" href="css/responsive.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/fonts.css">
+            <link rel="stylesheet" href="./css/estilos.css">
 
     </head>
 <body >
@@ -50,11 +51,16 @@
            </nav>
          </header>
         <!-- End Header Nico Section -->
-
+<!--
         <div class="centrarimg">
             <section id="image_slider" class="center">
             </section>
         </div>
+-->
+  <div class="img_item">
+
+  </div>
+
 
 
 
@@ -215,26 +221,18 @@ Ambos procesos se juntan en nuestro centro de distribución y posteriormente son
 				<div class="clnt_tstm">
 					<div class="sngl_tstm">
 						<i class="fa fa-quote-right"></i>
-						<h3>Integridad</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur sequi accusamus voluptatum rem itaque alias deleniti nostrum aperiam fugiat voluptates debitis praesentium incidunt accusantium distinctio,</p>
-						<h6> -Nicolas Rodriguez</h6>
+						<h3>Vida</h3>
+						<p>“Toma cuidado de tu cuerpo es el único lugar que tienes para vivir”</p>
+						<h6> -Jim Rohn</h6>
 					</div>
 				</div>
 
 				<div class="clnt_tstm">
 					<div class="sngl_tstm">
 						<i class="fa fa-quote-right"></i>
-						<h3>Cariño</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur sequi accusamus voluptatum rem itaque alias deleniti nostrum aperiam fugiat voluptates debitis praesentium incidunt accusantium distinctio,</p>
-						<h6>- shura deo</h6>
-					</div>
-				</div>
-				<div class="clnt_tstm">
-					<div class="sngl_tstm">
-						<i class="fa fa-quote-right"></i>
-						<h3>Profesionalismo</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur sequi accusamus voluptatum rem itaque alias deleniti nostrum aperiam fugiat voluptates debitis praesentium incidunt accusantium distinctio,</p>
-						<h6>- kumara deo</h6>
+						<h3>Cuerpo</h3>
+						<p>“hasta el 70% de nuestro cuerpo es Agua”</p>
+						<h6> -Erre Pe</h6>
 					</div>
 				</div>
 
