antes de posiblemente equivocarme

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         <link rel="stylesheet" href="css/fonts.css">
 
     </head>
-<body >
+<body>
 
 
     <header>
@@ -37,7 +37,7 @@
         <li><a href="index.html">Inicio</a></li>
         <li><a href="about.html">Quienes Somos</a></li>
         <li><a href="productos.html">Productos</a></li>
-        <li><a class="page-scroll" href="#ctn_sec">Contacto</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
        </li>
 
       </ul>
@@ -222,23 +222,30 @@ End Counting section-->
 </section>
  End progress bar Section -->
 
+<div class="container">
+    <div class="row">
+        <img src="img_r/logo.jpeg" class="logo_aguas" alt="Aguas Concepcion">
 
+    </div>
+
+</div>
 <!-- start Latest post Section -->
 <section id="lts_sec">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs12 ">
 				<div class="title_sec">
-					<h1>Our Latest Blog</h1>
-					<h2>WE’RE BRANDING & DIGITAL STUDIO FROM VIET NAM</h2>
+					<h1>Sobre nosotros</h1>
+					<p>Creados en el 2017, siendo una empresa que adopta el reto de llegar con agua purificada a hogares y negocios del Gran Concepción; con la tarea de entregar un servicio de excelencia que cumpla con normas de calidad internacionales, para así ser reconocidos y posicionados como líderes de la industria.</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-12">
 				<div class="lts_pst">
 
 					<h2>Compromiso</h2>
-					<p>Somos una Empresa comprometida con nuestro entorno, el mundo y directamente con tus seres queridos.
-es por esto que desde nuestros inicios trabajamos con alianzas estratégicas; que nos permiten integrar en nuestra esencia las actividades claves como reutilizar y reciclar.</p>
+					<p>Somos una Empresa comprometida con nuestro entorno, el mundo y directamente con tus seres queridos,
+es por esto que desde nuestros inicios trabajamos con alianzas estratégicas; que permiten integrar en nuestra esencia las actividades claves como reutilizar y reciclar.
+</p>
 
 				</div>
 			</div>
@@ -307,6 +314,7 @@ es por esto que desde nuestros inicios trabajamos con alianzas estratégicas; qu
 	</div>
 </section>
 <!-- End contact us  Section -->
+<hr>
 <!-- start footer Section -->
 <footer id="ft_sec">
 	<div class="container">
