--- a/productos.html
+++ b/productos.html
@@ -25,9 +25,6 @@
 
     </head>
 <body >
-
-
-
          <header>
 
            <div class="menu_bar">
@@ -39,7 +36,7 @@
                <li><a href="index.html">Inicio</a></li>
                <li><a href="about.html">Quienes Somos</a></li>
                <li><a href="productos.html">Productos</a></li>
-               <li><a class="page-scroll" href="#ctn_sec">Contacto</a></li>
+               <li><a href="contacto.html">Contacto</a></li>
 							</li>
 
              </ul>
@@ -130,10 +127,7 @@
 				</ul>
 				</div>
 
-			<div class="all-portfolios">
-
-
-
+			<div class="all-portfolios ">
               <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
               		<div class="single-portfolio producto-hogar">
                     <section id="pricing_sec">
@@ -142,7 +136,7 @@
                             <div class="col-lg-4 col-md-4 col-sm-12">
                               <div class="sngl_pricing">
                                 <h2 class="title_bg_1">Hogar</h2>
-                                <img src="img_r/maquinas/test.png" class="img-responsive" alt="">
+                                <img src="img_r/maquinas/maquinas-1.jpg" class="img-responsive pequena" alt="">
                                 <ul>
                                   <li>Maquina ideal para casas y </li>
                                 </ul>
@@ -162,7 +156,7 @@
                             <div class="col-lg-4 col-md-4 col-sm-12">
                               <div class="sngl_pricing">
                                 <h2 class="title_bg_1">Empresa</h2>
-                                <img src="img_r/maquinas/test.png" class="img-responsive" alt="">
+                                <img src="img_r/maquinas/maquinas-2.jpg" class="img-responsive" alt="">
                                 <ul>
                                   <li>Maquina ideal para casas y </li>
                                 </ul>
@@ -182,7 +176,7 @@
                             <div class="col-lg-4 col-md-4 col-sm-12">
                               <div class="sngl_pricing">
                                 <h2 class="title_bg_1">Hogar</h2>
-                                <img src="img_r/maquinas/test.png" class="img-responsive" alt="">
+                                <img src="img_r/maquinas/maquinas-3.jpg" class="img-responsive" alt="">
                                 <ul>
                                   <li>Maquina ideal para casas y </li>
                                 </ul>
@@ -194,6 +188,166 @@
                   </div>
               </div>
 
+              <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
+              		<div class="single-portfolio producto-empresa">
+                    <section id="pricing_sec">
+                        <div class="container">
+                          <div class="row">
+                            <div class="col-lg-4 col-md-4 col-sm-12">
+                              <div class="sngl_pricing">
+                                <h2 class="title_bg_1">Hogar</h2>
+                                <img src="img_r/maquinas/maquinas-4.jpg" class="img-responsive pequena" alt="">
+                                <ul>
+                                  <li>Maquina ideal para casas y </li>
+                                </ul>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </section>
+              		</div>
+              </div>
+
+              <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
+              		<div class="single-portfolio producto-hogar">
+                    <section id="pricing_sec">
+                        <div class="container">
+                          <div class="row">
+                            <div class="col-lg-4 col-md-4 col-sm-12">
+                              <div class="sngl_pricing">
+                                <h2 class="title_bg_1">Hogar</h2>
+                                <img src="img_r/maquinas/maquinas-5.jpg" class="img-responsive pequena" alt="">
+                                <ul>
+                                  <li>Maquina ideal para casas y </li>
+                                </ul>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </section>
+              		</div>
+              </div>
+
+              <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
+              		<div class="single-portfolio producto-empresa">
+                    <section id="pricing_sec">
+                        <div class="container">
+                          <div class="row">
+                            <div class="col-lg-4 col-md-4 col-sm-12">
+                              <div class="sngl_pricing">
+                                <h2 class="title_bg_1">Empresa</h2>
+                                <img src="img_r/maquinas/maquinas-5.jpg" class="img-responsive pequena" alt="">
+                                <ul>
+                                  <li>Maquina ideal para casas y </li>
+                                </ul>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </section>
+              		</div>
+              </div>
+
+              <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
+              		<div class="single-portfolio producto-hogar">
+                    <section id="pricing_sec">
+                        <div class="container">
+                          <div class="row">
+                            <div class="col-lg-4 col-md-4 col-sm-12">
+                              <div class="sngl_pricing">
+                                <h2 class="title_bg_1">Hogar</h2>
+                                <img src="img_r/maquinas/maquinas-6.jpg" class="img-responsive pequena" alt="">
+                                <ul>
+                                  <li>Maquina ideal para casas y </li>
+                                </ul>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </section>
+              		</div>
+              </div>
+
+              <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
+              		<div class="single-portfolio producto-Empresa">
+                    <section id="pricing_sec">
+                        <div class="container">
+                          <div class="row">
+                            <div class="col-lg-4 col-md-4 col-sm-12">
+                              <div class="sngl_pricing">
+                                <h2 class="title_bg_1">Empresa</h2>
+                                <img src="img_r/maquinas/maquinas-7.jpg" class="img-responsive pequena" alt="">
+                                <ul>
+                                  <li>Maquina ideal para casas y </li>
+                                </ul>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </section>
+              		</div>
+              </div>
+
+              <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
+              		<div class="single-portfolio producto-hogar">
+                    <section id="pricing_sec">
+                        <div class="container">
+                          <div class="row">
+                            <div class="col-lg-4 col-md-4 col-sm-12">
+                              <div class="sngl_pricing">
+                                <h2 class="title_bg_1">Hogar</h2>
+                                <img src="img_r/maquinas/maquinas-8.jpg" class="img-responsive pequena" alt="">
+                                <ul>
+                                  <li>Maquina ideal para casas y </li>
+                                </ul>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </section>
+              		</div>
+              </div>
+
+              <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
+              		<div class="single-portfolio producto-empresa">
+                    <section id="pricing_sec">
+                        <div class="container">
+                          <div class="row">
+                            <div class="col-lg-4 col-md-4 col-sm-12">
+                              <div class="sngl_pricing">
+                                <h2 class="title_bg_1">Empresa</h2>
+                                <img src="img_r/maquinas/maquinas-9.jpg" class="img-responsive pequena" alt="">
+                                <ul>
+                                  <li>Maquina ideal para casas y </li>
+                                </ul>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </section>
+              		</div>
+              </div>
+
+              <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
+              		<div class="single-portfolio producto-hogar">
+                    <section id="pricing_sec">
+                        <div class="container">
+                          <div class="row">
+                            <div class="col-lg-4 col-md-4 col-sm-12">
+                              <div class="sngl_pricing">
+                                <h2 class="title_bg_1">Hogar</h2>
+                                <img src="img_r/maquinas/maquinas-10.jpg" class="img-responsive pequena" alt="">
+                                <ul>
+                                  <li>Maquina ideal para casas y </li>
+                                </ul>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </section>
+              		</div>
+              </div>
+
 
 
 			</div>
@@ -202,10 +356,48 @@
 		</div>
 </section>
 <!-- End Portfolio Section -->
-
-
-
-
+<!-- start contact us Section -->
+<section id="ctn_sec">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs12 ">
+				<div class="title_sec">
+					<h1>Contactanos!</h1>
+					<h2>El mejor agua que beberas hoy!</h2>
+				</div>
+			</div>
+			<div class="col-sm-6">
+				<div id="cnt_form">
+					<form id="contact-form" class="contact" name="contact-form" method="post" action="send-mail.php">
+						<div class="form-group">
+						<input type="text" name="name" class="form-control name-field" required="required" placeholder="Tu Nombre">
+						</div>
+						<div class="form-group">
+							<input type="email" name="email" class="form-control mail-field" required="required" placeholder="Tu Email">
+						</div>
+						<div class="form-group">
+							<textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Mensaje"></textarea>
+						</div>
+						<div class="form-group">
+							<button type="submit" class="btn btn-primary">Enviar</button>
+						</div>
+					</form>
+				</div>
+			</div>
+			<div class="col-lg-6 col-md-6 col-sm-6">
+				<div class="cnt_info">
+					<ul>
+						<li><i class="fa fa-facebook"></i><p><a target="_blank" href="https://www.facebook.com/Aguas-Concepción-1967725063471150/?ref=page_internal">Facebook</a></li>
+						<li><i class="fa fa-envelope"></i><p>contacto@aguasconcepcion.cl</p></li>
+						<li><i class="fa fa-phone"></i><p>+56 9 99116927</p></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+<!-- End contact us  Section -->
+<hr>
 <!-- start footer Section -->
 <footer id="ft_sec">
 	<div class="container">
