--- a/index.html
+++ b/index.html
@@ -182,7 +182,6 @@
  	</div>
  </section>
   <!-- End Service Section -->
-
 <!-- start about Section -->
 <section id="abt_sec">
 	<div class="container">
@@ -190,20 +189,16 @@
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs12 ">
 				<div class="title_sec">
 					<h1>Nuestros Procesos</h1>
-					<h2>WE’RE BRANDING & DIGITAL STUDIO FROM VIET NAM</h2>
 				</div>
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs12 ">
 				<div class="abt">
-					<p>Estos se llevan acabo dentro de una planta embotelladora, la cual cuenta con tecnología de punta en esta materia.
+					<p>Se lleva a cabo al interior de una plata purificadora con tecnología de punta.
 Aguas Concepcion, nace desde lo mas profundo de nuestra tierra; las aguas son extraídas desde corrientes subterráneas, almacenadas y decantadas, para posteriormente ser potabilizadas
-Luego de lo anterior comienza el proceso de purificación, mediante un filtro de carbono activo, las aguas son filtradas de distintas impurezas, tales como “cloro y minerales” entre otros.
-Continuando el proceso las aguas son sometidas en nuestra planta de osmosis inversa; la cual elimina cualquier clase de impureza y/o partícula que nuestro producto pudiera tener hasta ese momento.
-
-Paralelamente a lo anterior, se lleva a cabo un meticuloso proceso de higiene, donde cada bidón es revisado para verificar que efectivamente se pueda reutilizar, es despojado de cualquier clase de adhesivos, tapas y demás con el fin de entrar en nuestra limpiadora, la cual realiza el proceso de forma autónoma y con agua purificada, con el fin de obtener un producto “libre de sodio al 100%”.
-
-Ambos procesos se juntan en nuestro centro de distribución y posteriormente son repartidos a toda nuestra familia, de esta forma Aguas Concepcion cobra vida.
-</p>
+Luego de lo anterior, comienza el proceso de purificación, mediante un filtro de carbono activo, las aguas son filtradas de diversas impurezas, tales como cloro, minares, entre otros.
+Continuando el proceso, las aguas son sometidas en nuestra planta de osmosis inversa; la cual elimina cualquier clase de impureza y/o partícula que nuestro producto pudiera tener hasta ese momento.</p>
+          <p>Paralelamente a lo anterior, se lleva a cabo un meticuloso proceso de higiene, donde cada bidón es revisado para verificar que efectivamente se pueda reutilizar, es despojado de cualquier clase de adhesivos, tapas y demás con el fin de entrar en nuestra limpiadora, la cual realiza el proceso de forma autónoma, con agua purificada, obteniendo así un producto de excelencia “libre de sodio al 100%”.</p>
+          <p>Ambos procesos se juntan en nuestro centro de distribución y posteriormente son repartidos a toda nuestra familia. De esta forma Aguas Concepcion cobra vida.</p>
 				</div>
 			</div>
 		</div>
@@ -235,6 +230,14 @@ Ambos procesos se juntan en nuestro centro de distribución y posteriormente son
 						<h6> -Erre Pe</h6>
 					</div>
 				</div>
+
+        <div class="clnt_tstm">
+          <div class="sngl_tstm">
+            <i class="fa fa-quote-right"></i>
+            <h3>Salud</h3>
+            <p>“Aguas es vida”</p>
+          </div>
+        </div>
 
 				</div>
 			</div>
@@ -577,6 +580,7 @@ End our team Section -->
 	</div>
 </section>
 <!-- End contact us  Section -->
+<hr>
 <!-- start footer Section -->
 <footer id="ft_sec">
 	<div class="container">
