subido a produccion, aun quedan unos detalles

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
 
     <header>
-    <div class="menu_bar">
+    <div class="menu_bar navbar">
       <a href="#" class="bt-menu"><span class="icon-menu"></span>Aguas Concepción</a>
     </div>
 
@@ -340,11 +340,11 @@ es por esto que desde nuestros inicios trabajamos con alianzas estratégicas; qu
 <!-- End footer Section -->
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-        <script src="js/vendor/jquery-1.11.3.min.js"></script>
+
     <script type="text/javascript" src="./js/menu.js"></script>
 <script src="js/isotope.pkgd.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="js/jquery-ui.js"></script>
+
 <script src="js/appear.js"></script>
 <script src="js/jquery.counterup.min.js"></script>
 <script src="js/waypoints.min.js"></script>
