--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
          <header>
 
-           <div class="menu_bar">
+           <div class="menu_bar navbar">
              <a href="#" class="bt-menu"><span class="icon-menu"></span>Aguas Concepción</a>
            </div>
 
@@ -136,45 +136,45 @@
  			</div>
  			<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
  				<div class="service">
- 					<i class="fa fa-globe"></i>
+ 					<i class="fa fa-cart-plus"></i>
  					<h2>Arriendo</h2>
  					<div class="service_hoverly">
- 						<i class="fa fa-globe"></i>
+ 						<i class="fa fa-cart-plus"></i>
  						<h2>Arriendo</h2>
- 						<p>Arrendamos maquinas para ahorrar en costos en su hogar</p>
+ 						<p>Arrendamos maquinas para ahorrar en costos en su Hogar o Empresa.</p> <br>
  					</div>
  				</div>
  			</div>
  			<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
  				<div class="service">
- 					<i class="fa fa-paper-plane"></i>
+ 					<i class="fa fa-cart-arrow-down"></i>
  					<h2>Venta Productos</h2>
  					<div class="service_hoverly">
- 						<i class="fa fa-paper-plane"></i>
+ 						<i class="fa fa-cart-arrow-down"></i>
  						<h2>Venta Productos</h2>
- 						<p>Le vendemos los productos necesarios para su comodidad</p>
+ 						<p>Todos los productos necesarios para su comodidad y vitalidad</p>  <br>
  					</div>
  				</div>
  			</div>
  			<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
  				<div class="service">
- 					<i class="fa fa-wordpress"></i>
+ 					<i class="fa  fa-truck"></i>
  					<h2>Despacho</h2>
  					<div class="service_hoverly">
- 						<i class="fa fa-wordpress"></i>
+ 						<i class="fa  fa-truck"></i>
  						<h2>Despacho</h2>
- 						<p>Despacho a domicilio! sujeto a condiciones.</p>
+ 						<p>Despacho gratuito dentro de nuestra zona de reparto</p><br>
  					</div>
  				</div>
  			</div>
  			<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
  				<div class="service">
- 					<i class="fa fa-paint-brush"></i>
- 					<h2>Graphic Design</h2>
+ 					<i class="fa fa-leaf"></i>
+ 					<h2>Purificación</h2>
  					<div class="service_hoverly">
- 						<i class="fa fa-paint-brush"></i>
- 						<h2>Graphic Design</h2>
- 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore ab odio quas  , voluptate aspernatur!</p>
+ 						<i class="fa fa-pagelines"></i>
+ 						<h2>Purificación</h2>
+ 						<p>Cuidamos y tratamos el agua que beberás con los mejores procesos disponibles</p>
  					</div>
  				</div>
  			</div>
@@ -216,8 +216,8 @@ Continuando el proceso, las aguas son sometidas en nuestra planta de osmosis inv
 				<div class="clnt_tstm">
 					<div class="sngl_tstm">
 						<i class="fa fa-quote-right"></i>
-						<h3>Vida</h3>
-						<p>“Toma cuidado de tu cuerpo es el único lugar que tienes para vivir”</p>
+						<h3>Responsabilidad</h3>
+						<p>“No somos dueños de la tierra en la que vivimos, si de nuestro cuerpo y lo cuidamos con Aguas Concepción"</p>
 						<h6> -Jim Rohn</h6>
 					</div>
 				</div>
@@ -606,11 +606,11 @@ End our team Section -->
 <!-- End footer Section -->
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-        <script src="js/vendor/jquery-1.11.3.min.js"></script>
+
     <script type="text/javascript" src="./js/menu.js"></script>
 <script src="js/isotope.pkgd.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="js/jquery-ui.js"></script>
+
 <script src="js/appear.js"></script>
 <script src="js/jquery.counterup.min.js"></script>
 <script src="js/waypoints.min.js"></script>
