--- a/productos.html
+++ b/productos.html
@@ -121,8 +121,9 @@
 			<div class="col-lg-12">
 				<div class="portfolio-filter text-uppercase text-center">
 				<ul class="filter">
-				<li class="active" data-filter="*">Todos</li>
-        <li data-filter=".producto-venta">Venta</li>
+
+				<li data-filter=".todos"  >Todos</li>
+        <li data-filter=".producto-venta" id="inicio">Venta</li>
         <li data-filter=".producto-arriendo">Arriendo</li>
         <li data-filter=".producto-acc-rec">Accesorios y Recargas</li>
         <li data-filter=".producto-pedido">Maquinas a pedidos</li>
@@ -134,7 +135,7 @@
 <!--       INICIO PRODUCTOS VENTA       -->
 
               <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-              		<div class="single-portfolio producto-venta">
+              		<div class="single-portfolio producto-venta todos">
                     <section id="pricing_sec">
                         <div class="container">
                           <div class="row">
@@ -143,10 +144,16 @@
                                 <h2 class="title_bg_1">Bomba Manual</h2>
                                 <img src="img_r/maquinas/maquinas-4.jpg" class="img-responsive pequena" alt="">
                                 <ul>
-                                  <li>
-                                     -Bidón 20 lt lleno de Agua Purificada <br>
-                                     -Valor $9.900 <br>
-                                     -Valor Con 2 bidones llenos de Agua Purificada $15.300    <br>                                        -Valor Con 3 bidones llenos de Agua Purificada $ 20.700  </li>
+                                    <li>
+
+                                        -Bomba Manual <br>
+                                        -Manilla Transportadora <br>
+                                       -Bidón 20 lt lleno de Agua Purificada <br>
+                                       -Valor $9.900 <br>
+                                       -Valor Con 2 bidones llenos de Agua Purificada $15.300    <br>                                        -Valor Con 3 bidones llenos de Agua Purificada $ 20.700 
+
+
+                                     </li>
                                 </ul>
                               </div>
                             </div>
@@ -158,16 +165,18 @@
 
 
               <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-              		<div class="single-portfolio producto-venta">
+              		<div class="single-portfolio producto-venta todos">
                     <section id="pricing_sec">
                         <div class="container">
                           <div class="row">
                             <div class="col-lg-4 col-md-4 col-sm-12">
                               <div class="sngl_pricing">
                                 <h2 class="title_bg_1">Soporte Básico</h2>
-                                <img src="img_r/maquinas/maquinas-1.jpg" class="img-responsive pequena" alt="">
+                                <img src="img_r/maquinas/maquinas-3.jpg" class="img-responsive pequena" alt="">
                                 <ul>
-                                  <li>-Bidón 20 lt lleno de Agua Purificada        <br>
+                                  <li>
+                                      -Soporte Básico Color Blanco <br>
+                                    -Bidón 20 lt lleno de Agua Purificada        <br>
                                       -Valor $12.500                                   <br>
                                       -Valor Con 2 bidones llenos de Agua Purificada  $17.000  <br>
                                       -Valor Con 3 bidones llenos de Agua Purificada $22.000 </li>
@@ -181,7 +190,7 @@
               </div>
 
               <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-              		<div class="single-portfolio producto-venta">
+              		<div class="single-portfolio producto-venta todos">
                     <section id="pricing_sec">
                         <div class="container">
                           <div class="row">
@@ -190,7 +199,9 @@
                                 <h2 class="title_bg_1">Soporte Eléctrico</h2>
                                 <img src="img_r/maquinas/maquinas-2.jpg" class="img-responsive pequena" alt="">
                                 <ul>
-                                  <li>-Agua Fría y Caliente <br>
+                                  <li>
+                                    -Sporte Eléctrico Agua Fría y Caliente
+                                    -Agua Fría y Caliente <br>
                                     -Bidón 20 lt lleno de Agua Purificada  <br>
                                     -Valor $ 54.900             <br>
                                     -Valor Con 2 bidones llenos de Agua Purificada  $ 59.900  <br>
@@ -205,7 +216,7 @@
               </div>
 
               <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-              		<div class="single-portfolio producto-venta">
+              		<div class="single-portfolio producto-venta todos">
                     <section id="pricing_sec">
                         <div class="container">
                           <div class="row">
@@ -214,7 +225,9 @@
                                 <h2 class="title_bg_1">Soporte Básico</h2>
                                 <img src="img_r/maquinas/maquinas-3.jpg" class="img-responsive pequena" alt="">
                                 <ul>
-                                  <li> -Bidón 10 lt lleno de Agua Purificada  <br>
+                                  <li>
+                                    -Sporte Básico Color Blanco
+                                    -Bidón 10 lt lleno de Agua Purificada  <br>
                                       -Valor $9.500        <br>
                                         -Valor Con 2 bidones de 10 lt llenos de Agua Purificada  $12.500     <br>
                                         -Valor Con 3 bidones de 10 lt llenos de Agua Purificada $15.500  </li>
@@ -228,7 +241,7 @@
               </div>
 
               <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-              		<div class="single-portfolio producto-venta">
+              		<div class="single-portfolio producto-venta todos">
                     <section id="pricing_sec">
                         <div class="container">
                           <div class="row">
@@ -237,7 +250,9 @@
                                 <h2 class="title_bg_1">Bomba Manual </h2>
                                 <img src="img_r/maquinas/maquinas-4.jpg" class="img-responsive pequena" alt="">
                                 <ul>
-                                  <li> -Manilla Transportadora   <br>
+                                  <li>
+                                    -Bomba Manual
+                                    -Manilla Transportadora   <br>
                                         -Bidón 10 lt lleno de Agua Purificada  <br>
                                          -Valor $ 7.000  <br>
                                          -Valor Con 2 bidones de 10 lt llenos de Agua Purificada  $10.000  <br>
@@ -257,7 +272,7 @@
       <!-- INICIO PRODUCTOS ARRIENDO -->
 
       <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-          <div class="single-portfolio producto-arriendo">
+          <div class="single-portfolio producto-arriendo todos">
             <section id="pricing_sec">
                 <div class="container">
                   <div class="row">
@@ -266,7 +281,8 @@
                         <h2 class="title_bg_1"> Soporte Eléctrico</h2>
                         <img src="img_r/maquinas/maquinas-2.jpg" class="img-responsive pequena" alt="">
                         <ul>
-                          <li>-Agua Fría y Caliente <br>
+                          <li>
+                            -Soporte Eléctrico Agua Fría y Caliente <br>
                             -2 Bidones 20 lt lleno de Agua Purificada <br>
                             -Valor Mensual $ 24.900       <br>
                             -Valor por 3 meses $ 20.900 (Mensual)     <br>
@@ -283,7 +299,7 @@
 
 
       <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-          <div class="single-portfolio producto-arriendo">
+          <div class="single-portfolio producto-arriendo todos">
             <section id="pricing_sec">
                 <div class="container">
                   <div class="row">
@@ -293,7 +309,7 @@
                         <img src="img_r/maquinas/maquinas-10.jpg" class="img-responsive pequena" alt="">
                         <ul>
                           <li>
-                            -Agua Fría y Caliente <br>
+                            -Soporte Eléctrico Agua Fría y Caliente <br>
                             -2 Bidones 20 lt lleno de Agua Purificada <br>
                             -Con Frigobar <br>
                             *Disponible en Negro, Gris y Blanco <br> 
@@ -311,7 +327,7 @@
 
 
       <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-          <div class="single-portfolio producto-arriendo">
+          <div class="single-portfolio producto-arriendo todos">
             <section id="pricing_sec">
                 <div class="container">
                   <div class="row">
@@ -320,7 +336,8 @@
                         <h2 class="title_bg_1"> Soporte Eléctrico</h2>
                         <img src="img_r/maquinas/maquinas-11.jpg" class="img-responsive pequena" alt="">
                         <ul>
-                          <li> -Agua Fría y Caliente  <br>
+                          <li>
+                            -Soporte Eléctrico Agua Fría y Caliente  <br>
                               -2 Bidones 20 lt lleno de Agua Purificada          <br>
                                  *Disponible en Negro.   <br>
                                  -Plan solo Semestral $ 29.900 (Mensual) </li>
@@ -339,7 +356,7 @@
       <!-- INICIO PRODUCTOS ACCESORIOS Y RECARGAS -->
 
       <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-          <div class="single-portfolio producto-acc-rec">
+          <div class="single-portfolio producto-acc-rec todos">
             <section id="pricing_sec">
                 <div class="container">
                   <div class="row">
@@ -348,7 +365,9 @@
                         <h2 class="title_bg_1"> Manilla transportadora</h2>
                         <img src="img_r/maquinas/maquinas-5.jpg" class="img-responsive pequena" alt="">
                         <ul>
-                          <li> -Bomba Manual            <br>
+                          <li>
+                            -Manilla Transportadora <br>
+                            -Bomba Manual            <br>
                              -Valor $5.000</li>
                         </ul>
                       </div>
@@ -360,7 +379,7 @@
       </div>
 
       <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-          <div class="single-portfolio producto-acc-rec">
+          <div class="single-portfolio producto-acc-rec todos">
             <section id="pricing_sec">
                 <div class="container">
                   <div class="row">
@@ -369,7 +388,7 @@
                         <h2 class="title_bg_1">Soporte Básico </h2>
                         <img src="img_r/maquinas/maquinas-3.jpg" class="img-responsive pequena" alt="">
                         <ul>
-                          <li> -Color Blanco <br>
+                          <li> -Soporte Básico Color Blanco <br>
                               -Sin Bidón <br>
                               -Valor 7.900
                             </li>
@@ -383,7 +402,7 @@
       </div>
 
       <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-          <div class="single-portfolio producto-acc-rec">
+          <div class="single-portfolio producto-acc-rec todos">
             <section id="pricing_sec">
                 <div class="container">
                   <div class="row">
@@ -392,7 +411,7 @@
                         <h2 class="title_bg_1">Soporte Eléctrico </h2>
                         <img src="img_r/maquinas/maquinas-2.jpg" class="img-responsive pequena" alt="">
                         <ul>
-                          <li>-Agua Fría y Caliente <br>
+                          <li>-Soporte Eléctrico Agua Fría y Caliente <br>
                             -Sin Bidón <br>
                             -Valor Mensual $49.990 </li>
                         </ul>
@@ -405,7 +424,7 @@
       </div>
 
       <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-          <div class="single-portfolio producto-acc-rec">
+          <div class="single-portfolio producto-acc-rec todos">
             <section id="pricing_sec">
                 <div class="container">
                   <div class="row">
@@ -416,9 +435,8 @@
                         <ul>
                           <li>
                             -Un Bidon de 20 lt lleno de Agua Purificada         <br>
-                                                                      -Valor $ 5.900
-
-                            </li>
+                            -Valor $ 5.900
+                          </li>
                         </ul>
                       </div>
                     </div>
@@ -429,7 +447,7 @@
       </div>
 
       <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-          <div class="single-portfolio producto-acc-rec">
+          <div class="single-portfolio producto-acc-rec todos">
             <section id="pricing_sec">
                 <div class="container">
                   <div class="row">
@@ -451,7 +469,7 @@
       </div>
 
       <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-          <div class="single-portfolio producto-acc-rec">
+          <div class="single-portfolio producto-acc-rec todos">
             <section id="pricing_sec">
                 <div class="container">
                   <div class="row">
@@ -473,7 +491,7 @@
       </div>
 
       <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-          <div class="single-portfolio producto-acc-rec">
+          <div class="single-portfolio producto-acc-rec todos">
             <section id="pricing_sec">
                 <div class="container">
                   <div class="row">
@@ -498,7 +516,7 @@
 
       <!-- INICIO PRODUCTOS A PEDIDO -->
       <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-          <div class="single-portfolio producto-pedido">
+          <div class="single-portfolio producto-pedido todos">
             <section id="pricing_sec">
                 <div class="container">
                   <div class="row">
@@ -523,7 +541,7 @@
       </div>
 
       <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-          <div class="single-portfolio producto-pedido">
+          <div class="single-portfolio producto-pedido todos">
             <section id="pricing_sec">
                 <div class="container">
                   <div class="row">
@@ -547,7 +565,7 @@
       </div>
 
       <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-          <div class="single-portfolio producto-pedido">
+          <div class="single-portfolio producto-pedido todos">
             <section id="pricing_sec">
                 <div class="container">
                   <div class="row">
@@ -571,7 +589,7 @@
       </div>
 
       <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-          <div class="single-portfolio producto-pedido">
+          <div class="single-portfolio producto-pedido todos">
             <section id="pricing_sec">
                 <div class="container">
                   <div class="row">
@@ -595,7 +613,7 @@
       </div>
 
       <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-          <div class="single-portfolio producto-pedido">
+          <div class="single-portfolio producto-pedido todos">
             <section id="pricing_sec">
                 <div class="container">
                   <div class="row">
@@ -619,7 +637,7 @@
       </div>
 
       <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-          <div class="single-portfolio producto-pedido">
+          <div class="single-portfolio producto-pedido todos">
             <section id="pricing_sec">
                 <div class="container">
                   <div class="row">
@@ -643,7 +661,7 @@
       </div>
 
       <div class="col-sm-12  col-lg-12 col-md-12 col-xs-12 ">
-          <div class="single-portfolio producto-pedido">
+          <div class="single-portfolio producto-pedido todos">
             <section id="pricing_sec">
                 <div class="container">
                   <div class="row">
@@ -770,6 +788,8 @@
             delay: 10,
             time: 1000
         });
+        $('#inicio').trigger('click');
+
     });
 </script>
 
@@ -792,6 +812,8 @@ $(window).load(function(){
 	});
 
 });
+
+
 </script>
 
 
